# repr-utils

./: .flake8  .gitignore  README.rst  examples.ipynb  pyproject.toml  tasks.py
.github/workflows/: ci.yml  codecov.yml
.pytest_locker/: test.test_link.test_header.as_html.html  test.test_link.test_header.as_latex.latex  test.test_link.test_header.as_markdown.md  test.test_link.test_header.as_string.str  test.test_list.test_list_enumeration.as_html.html  test.test_list.test_list_enumeration.as_latex.latex  test.test_list.test_list_enumeration.as_string.str  test.test_list.test_list_mixed.as_html.html  test.test_list.test_list_mixed.as_latex.latex  test.test_list.test_list_mixed.as_markdown.md  test.test_list.test_unordered.as_html.html  test.test_list.test_unordered.as_latex.latex  test.test_list.test_unordered.as_string.str  test.test_table.test_table.as_latex.latex  test.test_table.test_table.as_string.str
src/repr_utils/: __init__.py  _base.py  _jinja.py  _util.py  header.py  link.py  list.py  table.py
src/repr_utils/templates/: __init__.py  table_html.jinja
test/: fixtures.py  test_header.py  test_link.py  test_list.py  test_table.py
test/.pytest_locker/: test.test_header.test_header.as_html.html  test.test_header.test_header.as_latex.latex  test.test_table.test_table.as_html.html  test.test_table.test_table.as_markdown.md
tests/: test_repr_utils.py
