[tool.poetry]
name = "repr-utils"
version = "0.1.1"
description = """\
    Contains common ellements that when displayed will adhere to the correct format \
    (e.g markdown, latex, html, text) \
    in tools like jupyter notebooks"""
authors = ["luttik <dtluttik@gmail.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/Luttik/repr_utils"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.1"
tabulate = "^0.8.7"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
dephell = "^0.8.2"
invoke = "^1.4.1"
flake8 = "^3.7.9"
flake8-annotations = "^2.0.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"

[tool.dephell.main]
from = {format="poetry", path="pyproject.toml"}
to = {format="setuppy", path="setup.py"}

[tool.isort]
include_trailing_comma=true
line_length=88
use_parentheses=true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["repr_utils"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "...",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
