[tool.poetry]
name = "repr-utils"
version = "0.1.3"
description = """\
    Contains common elements that when displayed will adhere to the correct format \
    (e.g markdown, latex, html, text) \
    in tools like jupyter notebooks"""
authors = ["luttik <dtluttik@gmail.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/Luttik/repr_utils"

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
dephell = "^0.8.2"
invoke = "^1.4.1"
flake8 = "^3.7.9"
flake8-annotations = "^2.0.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"
jupyter = "^1.0.0"
isort = "^4.3.21"
flake8-black = "^0.1.1"
codecov = "^2.0.22"
flake8-isort = "^3.0.0"

[tool.dephell.main]
from = {format="poetry", path="pyproject.toml"}
to = {format="setuppy", path="setup.py"}

[tool.isort]
include_trailing_comma=true
line_length=88
use_parentheses=true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["repr_utils"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["raise NotImplementedError", "[.]{3}"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
